# ubx-gps-server

./: Cargo.toml  README.md  error.txt  rover.json  server.py  station.json  test.py
config/moving_base/: rover.json  station.json
config/rtk/: station.json
gps_python_bridge/: Cargo.toml
gps_python_bridge/src/: lib.rs
src/: bluetooth.rs  connection.rs  device.rs  device_old.rs  lib.rs  main.rs  ntrip.rs  parse.rs  server.rs
src/bluetooth/: client.rs  server.rs
src/cmd/: cat.rs  config.rs  mod.rs  proxy.rs  put.rs  server.rs
src/connection/: outgoing.rs  pool.rs
src/msg/: mod.rs  nmea.rs  rtcm.rs  server.rs  ubx.rs
src/msg/ubx/: ack.rs  cfg.rs  inf.rs  mon.rs  nav.rs  rxm.rs
src/msg/ubx/cfg/: values.rs
src/old/: main.rs  nmea.rs  rtcm.rs  server.rs
src/old/cmd/: cat.rs  mod.rs  server.rs
src/old/ubx/: ack.rs  cfg.rs  mod.rs  mon.rs  rxm.rs
src/old/ubx/cfg/: value.rs
src/ubx/: cfg.rs  inf.rs  mod.rs  mon.rs  nav.rs  rxm.rs
src/ubx/cfg/: value.rs
