[package]
name = "gps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
enumflags2 = { version = "0.7.5", features = ["serde"]} 
clap = {version = "3.2.17", features = ["derive"]}
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio-serial = "5.4.3"
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.23"
env_logger = "0.9.0"
log = "0.4.17"
hyper = {version = "0.14.20", features = ["http1","client","tcp"]}
